update template properties

--- a/template.properties
+++ b/template.properties
@@ -1,5 +1,5 @@
 name=Skin 01
 encoding=UTF-8
 
-html.script.1.src=css/skin_01.css
-html.script.1.resource=index.html
+html.link.1.href=css/skin_01.css
+html.link.1.resource=index.html
